Bugfix, don't check content id or url in units
Avoid hide the edit button in units if their title is too long.

--- a/moocng/static/css/moocng.css
+++ b/moocng/static/css/moocng.css
@@ -444,6 +444,7 @@ code {
     display: inline-block;
     margin-top: 0;
     padding-left: 15px;
+    max-width: 500px;
 }
 
 .teacheradmin-units .kq h4 {
